--- a/styles.css
+++ b/styles.css
@@ -108,3 +108,97 @@ body {
     padding: 1px;
     box-sizing: border-box;
   }
+
+@media (max-width: 768px) {
+    body {
+      background-color: rgb(227, 227, 108);
+    }
+  
+    .seccion1,
+    .seccion2,
+    .seccion3 {
+      background-color: rgb(4, 4, 75);
+    }
+  
+    header {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .logo,
+    .nav,
+    .social {
+      width: 100%;
+    }
+  
+    .social {
+      padding: 15px;
+    }
+
+    .main {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .articles {
+      width: 100%;
+    }
+
+    .article {
+      width: 100%;
+    }
+
+    .publicidad {
+      width: 100%;
+    }
+  }
+  
+  @media (max-width: 1024px) and (min-width: 769px) {
+    body {
+      background-color: rgb(246, 188, 127);
+    }
+  
+    .seccion1,
+    .seccion2,
+    .seccion3 {
+      background-color: rgb(7, 117, 14);
+    }
+
+    header {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .logo,
+    .nav,
+    .social {
+      width: 100%;
+    }
+  
+    .social {
+      padding: 15px;
+    }
+
+    .main {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .articles {
+      width: 100%;
+    }
+    
+    .publicidad {
+      width: 100%;
+    }
+  }
+  
+  @media (max-width: 1200px) and (min-width: 1025px) {
+    .container {
+      max-width: 100%;
+      box-sizing: border-box;
+    }
+  }
+  
